--- a/src/views/layouts/app.hbs
+++ b/src/views/layouts/app.hbs
@@ -189,16 +189,20 @@
 					{{#if_equal user.tipo "ADMINISTRADOR"}}
                     {{> includes/menu/menu_admin}}
                     {{/if_equal}}
-                    {{#if_equal user.tipo "AUXILIAR"}}
-                    {{> includes/menu/menu_auxiliar}}
+                    {{#if_equal user.tipo "SUPERVISOR"}}
+                    {{> includes/menu/menu_supervisor}}
                     {{/if_equal}}
-                    {{#if_equal user.tipo "DOCTOR"}}
-                    {{> includes/menu/menu_doctor}}
+                    {{#if_equal user.tipo "VENDEDOR"}}
+                    {{> includes/menu/menu_vendedor}}
                     {{/if_equal}}
-                    {{#if_equal user.tipo "PACIENTE"}}
-                    {{> includes/menu/menu_paciente}}
-                    {{/if_equal}}
-					
+                    <div class="menu-item">
+                        <a  href="#" onclick="event.preventDefault();document.getElementById('logout-form').submit();" class="menu-link">
+                            <div class="menu-icon">
+                            <i class="fa fa-power-off"></i>
+                            </div>
+                            <div class="menu-text">Salir</div>
+                        </a>
+                    </div>
 					<!-- BEGIN minify-button -->
 					<div class="menu-item d-flex">
 						<a href="javascript:;" class="app-sidebar-minify-btn ms-auto d-flex align-items-center text-decoration-none" data-toggle="app-sidebar-minify"><i class="fa fa-angle-double-left"></i></a>
