--- a/src/views/reportes/template_pdfs/ventas.hbs
+++ b/src/views/reportes/template_pdfs/ventas.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Kardex de Productos</title>
+    <title>Ventas</title>
     <style type="text/css">
         * {
             font-family: sans-serif;
@@ -157,6 +157,24 @@
             width: 11.7in;
             height: 8.2in;
         }
+
+        .derecha {
+            text-align: right;
+            padding-right: 3px;
+        }
+
+        .izquierda {
+            text-align: left;
+            padding-left: 3px;
+        }
+
+        .img_celda img {
+            width: 45px;
+        }
+
+        .bold {
+            font-weight: bold;
+        }
     </style>
 </head>
 
@@ -168,7 +186,7 @@
         <h2 class="titulo">
             {{ datos.configuracion.razon_social }}
         </h2>
-        <h4 class="texto">KARDEX DE PRODUCTOS</h4>
+        <h4 class="texto">VENTAS</h4>
         <h4 class="fecha">Expedido: {{datos.fecha}}</h4>
     </div>
 
