Limpieza de codigo y archivos

--- a/src/views/layouts/login.hbs
+++ b/src/views/layouts/login.hbs
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Font: Source Sans Pro -->
-    <link href="/template/assets/css/vendor.min.css" rel="stylesheet" />
-    <link href="/template/assets/css/app.min.css" rel="stylesheet" />
+	<link href="{{urlbase}}/template/assets/css/vendor.min.css" rel="stylesheet" />
+	<link href="{{urlbase}}/template/assets/css/app.min.css" rel="stylesheet" />
     {{{_sections.css}}}
 
   </head>
@@ -16,18 +16,13 @@
 
     {{{body}}}
 
-    <!-- jQuery -->
-    <script
-      src="/template/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"
-    ></script>
-
     <!-- ================== BEGIN core-js ================== -->
-    <script src="/template/assets/js/vendor.min.js"></script>
-    <script src="/template/assets/js/app.min.js"></script>
+	<script src="{{urlbase}}/template/assets/js/vendor.min.js"></script>
+	<script src="{{urlbase}}/template/assets/js/app.min.js"></script>
     <!-- ================== END core-js ================== -->
 
     <!-- ================== BEGIN page-js ================== -->
-    <script src="/template/assets/js/login-v2.demo.js"></script>
+    <script src="{{urlbase}}/template/assets/js/login-v2.demo.js"></script>
     <!-- ================== END page-js ================== -->
 
   </body>
